# WhaleReplication

./: .gitignore  CMakeLists.txt  README.md  atrace.txt  btrace.txt  config.xml  config.xml.5  config_send.sh  configure_all.sh  ctrace.txt  git_add.sh  rebuild.sh  send_all.sh
include/: alloc_dynamic.h  common.h  config.h  dhmp.h  dhmp_client.h  dhmp_config.h  dhmp_context.h  dhmp_hash.h  dhmp_init.h  dhmp_log.h  dhmp_mica_shm_common.h  dhmp_server.h  dhmp_task.h  dhmp_top_api.h  dhmp_transport.h  hash.h  mica_partition.h  mica_rdma_common.h  mid_rdma_utils.h  midd_mica_benchmark.h  nic.h  numa_malloc_header.h  shm.h  shm_private.h  table.h  unlock_queue.h  util.h
src/: CMakeLists.txt
src/mica_kv/: CMakeLists.txt  alloc_dynamic.c  alloc_malloc.c  mehcached.h  midd_mica_client.c  midd_mica_server.c  shm.c  table.c  test_mmap.c
src/midd/: CMakeLists.txt  dhmp_config.c  dhmp_dev.c  dhmp_hash.c  dhmp_log.c  mid_epoll_context.c  mid_hashmap.c  mid_rdma_connection.c  mid_rdma_cq_handler.c  mid_rdma_init.c  mid_rdma_task.c  mid_rdma_top_api.c  mid_rdma_transport.c  mid_rdma_utils.c  mid_recv_resp_handler.c  midd_mica_benchmark.c  nic.c
